--- a/Pomidor/Pomidor.csproj
+++ b/Pomidor/Pomidor.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -6,10 +6,22 @@
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Data\Migrations\20190323102018_d.cs" />
+    <Compile Remove="Data\Migrations\20190323102018_d.Designer.cs" />
+    <Compile Remove="Data\Migrations\20190324050556_dd.cs" />
+    <Compile Remove="Data\Migrations\20190324050556_dd.Designer.cs" />
+    <Compile Remove="Data\Migrations\20190326152655_d.cs" />
+    <Compile Remove="Data\Migrations\20190326152655_d.Designer.cs" />
+    <Compile Remove="Data\Migrations\20190620151248_d.cs" />
+    <Compile Remove="Data\Migrations\20190620151248_d.Designer.cs" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
   </ItemGroup>
 
 </Project>
